<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/parentBackground"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="16dp">

            <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="204dp"
            android:layout_height="140dp"
            app:srcCompat="@mipmap/personne"
            android:background="@color/parentBackground"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@android:color/background_light"
                android:textSize="14sp"
                tools:text="@string/icone_Perssone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="204dp"
            android:layout_height="140dp"
            app:srcCompat="@mipmap/applications"
            android:background="@color/parentBackground" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"

                tools:text="@string/icone_App" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="204dp"
            android:layout_height="140dp"
            app:srcCompat="@mipmap/internet"
            android:background="@color/parentBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                tools:text="@string/icone_internet" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="32dp">
        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="204dp"
            android:layout_height="140dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:background="@color/parentBackground"  />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"
                tools:text="@string/icone_media" />
        </LinearLayout>
    </LinearLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="16dp">
            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="204dp"
                android:layout_height="140dp"
                app:srcCompat="@mipmap/time"
                android:background="@color/parentBackground"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                tools:text="@string/icone_temp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageButton
                android:id="@+id/imageButton22"
                android:layout_width="204dp"
                android:layout_height="140dp"
                app:srcCompat="@mipmap/stat"
                android:background="@color/parentBackground" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                tools:text="@string/icone_stat" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageButton
                android:id="@+id/imageButton23"
                android:layout_width="204dp"
                android:layout_height="140dp"
                app:srcCompat="@mipmap/config"
                android:background="@color/parentBackground"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                tools:text="@string/icone_config" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="32dp">
            <ImageButton
                android:id="@+id/imageButton24"
                android:layout_width="204dp"
                android:layout_height="140dp"
                app:srcCompat="@mipmap/home"
                android:background="@color/parentBackground" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="64dp"
                android:paddingTop="16dp"
                android:text="TextView"
                android:textColor="@android:color/background_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textSize="14sp"
                tools:text="@string/icone_home" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>